2.3/front_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: NodePort
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    nodePort: 30001
  selector:
    app: frontend
